adding a MeshGeometryStampedArray message

--- a/mesh_msgs/CMakeLists.txt
+++ b/mesh_msgs/CMakeLists.txt
@@ -16,6 +16,7 @@ add_message_files(
   MeshMaterial.msg
   MeshGeometry.msg
   MeshGeometryStamped.msg
+  MeshGeometryStampedArray.msg
   MeshMaterials.msg
   MeshMaterialsStamped.msg
   MeshVertexColors.msg
